IE: fix the pretty view cards spacing issue

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -2201,6 +2201,7 @@ ul.deployment-array.large{
   margin-top: 38px;
   list-style: none;
   display: table;
+  height: 100%;
 
   li.deployment{
     display: table-cell;
@@ -2318,6 +2319,7 @@ ul.deployment-array.small{
   margin-top: 10px;
   list-style: none;
   display: table;
+  height: 100%;
 
   li.deployment{
     display: table-cell;
